changed resume link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h3>I'm <strong>Sergio Gasquez</strong>, a Telecommunications Engineer.</h3>
         <h3>I love electronics, artificial intelligence and signal processing.</h3>
         <h3>Have a look at some of my working <a href="https://sergiogasquez.github.io/projects/"> projects</a>.</h3>
-        <h3>For more check out my academic &amp; professional <a href="https://demo.nurlan.co/hugo-vitae/">resume</a>.</h3>
+        <h3>For more check out my academic &amp; professional <a href="https://sergiogasquez.github.io/CV.pdf">resume</a>.</h3>
         <h3>Contact me by <a href="mailto:sergio.gasquez@gmail.com">email</a> or by <a href="http://www.linkedin.com/in/sergiogasquez">LinkedIn</a> .</h3>
         <div class="social">
   <ul class="social-links">
