Add google analytics

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-L3ZMZ2B4CN"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-189541806-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
 
@@ -295,7 +295,7 @@
   }
 
   gtag('js', new Date());
-  gtag('config', 'G-L3ZMZ2B4CN', {});
+  gtag('config', 'UA-189541806-2', {});
 
   
   document.addEventListener('click', onClickCallback, false);
@@ -877,7 +877,7 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>My name is Sergio Gasquez, I&rsquo;m a Telecommunications Engineer with Masters in Electronic Systems for Intelligent Environments who loves Firmware and Embedded Systems Programming. I was born in Granada and after graduating, I moved to Barcelona to work as a Firmware Engineer in HP, where I developed security features for the Ink Delivery System. At the beginning of 2020, I reallocated into A Coruña to work as an Embedded Sofware Developer in Instituto Tecnológico de Galicia (ITG). At ITG I am in charge of developing firmware for a &ldquo;drone in a box&rdquo; solution. </p>
+      <p>My name is Sergio Gasquez, I&rsquo;m a Telecommunications Engineer with Masters in Electronic Systems for Intelligent Environments who loves Firmware and Embedded Systems Programming. I was born in Granada and after graduating, I moved to Barcelona to work as a Firmware Engineer in HP, where I developed security features for the Ink Delivery System. At the beginning of 2020, I reallocated into A Coruña to work as an Embedded Sofware Developer in Instituto Tecnológico de Galicia (ITG). At ITG I am in charge of developing firmware for a drone in a box solution. </p>
 <!-- Dont hessitate to -->
 <!-- Technology is my biggest passion, I'm also curious learner  -->
 <p>
