--- a/project/monitoring-and-watering-system/index.html
+++ b/project/monitoring-and-watering-system/index.html
@@ -966,7 +966,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://sergiogasquez.github.io/">Sergio Gasquez</a></h5>
       <h6 class="card-subtitle">Embedded Software Engineer</h6>
-      <p class="card-text">Telecommunications Engineer with Masters in Electronic Systems for Intelligent Environments who loves firmware programming and embedded systems!</p>
+      <p class="card-text">Telecommunications Engineer with Masters in Electronic Systems for Intelligent Environments who loves firmware and embedded systems programming!</p>
       <ul class="network-icon" aria-hidden="true">
   
     
