--- a/index.html
+++ b/index.html
@@ -878,8 +878,8 @@
 
     <div class="article-style">
       <p>My name is Sergio Gasquez, I&rsquo;m a Telecommunications Engineer with Masters in Electronic Systems for Intelligent Environments who loves Firmware and Embedded Systems Programming. I was born in Granada and after graduating, I moved to Barcelona to work as a Firmware Engineer in HP, where I developed security features for the Ink Delivery System. At the beginning of 2020, I reallocated into A Coruña to work as an Embedded Sofware Developer in Instituto Tecnológico de Galicia (ITG). At ITG I am in charge of developing firmware for a drone in a box solution. </p>
-<!-- Dont hessitate to -->
-<!-- Technology is my biggest passion, I'm also curious learner  -->
+<p>I am a passionate technologist who enjoys learning new things, especially when they are related to electronics or programming! Out of work, I love doing sports (climbing, swimming, and hiking, mostly), traveling, and music.</p>
+<p>Don&rsquo;t hesitate to contact me! </p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/media/Resume.pdf" target="_blank">CV</a>.</p>
 
