--- a/project/am-receiver/index.html
+++ b/project/am-receiver/index.html
@@ -830,13 +830,13 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>Desing and assemblage of an homodyne receiver syntonizing a commercial broadcasting station in A.M. The radio was made of differents stages:</p>
+      <p>Design and assemblage of a homodyne receiver syntonizing a commercial broadcasting station in A.M. The radio was made of different stages:</p>
 <p>Audio stage
 Antenna
 Syntonized Amplifier
 Colpitts Oscillator
 AM demodulator and modulator
-Aditionall amplifier stage
+Additional amplifier stage
 Power and regulator</p>
 
     </div>
