Update RTI job description

--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@ into ESP boards!</p>
               <span>Remote (Granada, Spain)</span>
             
           </div>
-          <div class="card-text"><p>Software developer for Connext DDS Micro.</p>
+          <div class="card-text"><p>Software developer for Connext DDS Micro, a DDS implementation for resource-constrained applications, and Connext TSS, a FACE TSS solution powered by Connext DDS.</p>
 <ul>
 <li>Technologies: C/C++, Git, CMake, Linux</li>
 <li>Protocols: DDS</li>
