feat: ✨ Fix typos

--- a/project/am-receiver/index.html
+++ b/project/am-receiver/index.html
@@ -33,7 +33,7 @@
   
     
   
-  <meta name="description" content="Design and assemblage of an homodyne receiver syntonizing a commercial broadcasting station in A.M" />
+  <meta name="description" content="Design and assemblage of a homodyne receiver syntonizing a commercial broadcasting station in A.M." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://sergiogasquez.github.io/project/am-receiver/" />
@@ -345,7 +345,7 @@
   <meta property="og:site_name" content="Sergio Gasquez" />
   <meta property="og:url" content="https://sergiogasquez.github.io/project/am-receiver/" />
   <meta property="og:title" content="Homodyne AM Receiver | Sergio Gasquez" />
-  <meta property="og:description" content="Design and assemblage of an homodyne receiver syntonizing a commercial broadcasting station in A.M" /><meta property="og:image" content="https://sergiogasquez.github.io/project/am-receiver/featured.jpg" />
+  <meta property="og:description" content="Design and assemblage of a homodyne receiver syntonizing a commercial broadcasting station in A.M." /><meta property="og:image" content="https://sergiogasquez.github.io/project/am-receiver/featured.jpg" />
     <meta property="twitter:image" content="https://sergiogasquez.github.io/project/am-receiver/featured.jpg" /><meta property="og:locale" content="en-us" />
   
     
@@ -400,7 +400,7 @@
       "url": "https://sergiogasquez.github.io/images/icon_hu9a008880073e345ba742f82ec19c27ac_354710_192x192_fill_lanczos_center_3.png"
     }
   },
-  "description": "Design and assemblage of an homodyne receiver syntonizing a commercial broadcasting station in A.M"
+  "description": "Design and assemblage of a homodyne receiver syntonizing a commercial broadcasting station in A.M."
 }
 </script>
 
